WidgetWithLabelUI: Make drag to collapse better - Use onMouseMove to determine if a panel under mouse should collapse *Fixes collapsing multiple groups when only clicking.* - Checks if the widget has a BodyUI *Fixes non-grouping fields being able to start a drag to collapse.* - Use the header to determine when the collapse button should highlight *Telegraphs slightly better when you're able to collapse something* - Added a COLLAPSE-PASSTHROUGH className Allows an opt-in way to allow things to start a drag *Workaround for widgets not preventing their event from propagating.*

--- a/src/theme/theme.css
+++ b/src/theme/theme.css
@@ -47,7 +47,11 @@ body {
     padding: 2px;
 }
 
-.WIDGET-GROUP-BORDERED:hover .WIDGET-COLLAPSE-BTN {
+/* .WIDGET-GROUP-BORDERED:hover .WIDGET-COLLAPSE-BTN {
+    opacity: 100% !important;
+} */
+
+.COLLAPSE-PASSTHROUGH:hover .WIDGET-COLLAPSE-BTN {
     opacity: 100% !important;
 }
 
